# rl-mountain-problem

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/results/: demo__dqn__discrete_fuel__seed0.json  demo__dqn__discrete_steps__seed0.json  demo__ppo__continuous_fuel__seed0.json  demo__ppo__continuous_steps__seed0.json  demo__ppo__discrete_fuel__seed0.json  demo__ppo__discrete_steps__seed0.json  demo__q_learning__discrete_fuel__seed0.json  demo__q_learning__discrete_steps__seed0.json  demo__sac__continuous_fuel__seed0.json  demo__sac__continuous_steps__seed0.json  demo__sarsa__discrete_fuel__seed0.json  demo__sarsa__discrete_steps__seed0.json  full__dqn__discrete_fuel__seed0.json  full__dqn__discrete_fuel__seed1.json  full__dqn__discrete_fuel__seed2.json  full__dqn__discrete_steps__seed0.json  full__dqn__discrete_steps__seed1.json  full__dqn__discrete_steps__seed2.json  full__ppo__continuous_fuel__seed0.json  full__ppo__continuous_fuel__seed1.json  full__ppo__continuous_fuel__seed2.json  full__ppo__continuous_steps__seed0.json  full__ppo__continuous_steps__seed1.json  full__ppo__continuous_steps__seed2.json  full__ppo__discrete_fuel__seed0.json  full__ppo__discrete_fuel__seed1.json  full__ppo__discrete_fuel__seed2.json  full__ppo__discrete_steps__seed0.json  full__ppo__discrete_steps__seed1.json  full__ppo__discrete_steps__seed2.json  full__q_learning__discrete_fuel__seed0.json  full__q_learning__discrete_fuel__seed1.json  full__q_learning__discrete_fuel__seed2.json  (+15 more)
scripts/: build_notebook.py  build_submission.sh  smoke.py
(+49 files in other folders)
